    (i.e. neither "friend" nor "wizard"). Default = 150.
  - [30 Dec 00] In example file a.gwf, fixed comment about customized
    variables: for variable defined as var_foo, the usage in the text
    is %vfoo; (not %foo;).
  - [29 Dec 00] Added variable "always_surname" telling to always print
    the children surnames in descendant display, even if same than the
    father's (default = no).

* Lexicon (lang/lexicon.txt)
  - [26 Jan 01] Changed entry name "(french month)" into "(french revolution
    month)" (which is more exact).
  - [30 Dec 00] Fixed German translations (Frank Komarek + Falko Trojahn)
  - [29 Dec 00] Fixed some Spanish translations (Frank Komarek)

* Documentation
  - [17 Jan 01] Added French translation of "The GeneWeb source file format"
    (Melchior de Contades)

GeneWeb version 3.10
--------------------

* GeneWeb server or CGI (gwd)
  - [14 Dec 00] Added a system of general macros for "sources" and
    "notes". You can define customized variables in the configuration
    file (base.gwf): their values will be replaced in the "sources" and
    in the "notes". The syntax in configuration file is "var_ident=value"
    and in the sources and notes: "%vident;".
  - [03 Dec 00] Fixed bug in Hebrew calendar computation (example: Hebrew
    day was good for Gregorian date 2001-11-30 but incorrect for the following
    day 2001-12-01).
  - [28 Nov 00] Fixed bug: it was possible to create a loop by merging
    somebody with one of his/her ancestor.
  - [25 Nov 00] Small improvements: in update page, added "back" link,
    in "family deleted" page, added link to return to the person.
  - [24 Nov 00] Fixed bug: in automatic merge steps, the data base was
    not locked, risking to corrupt the data base if two persons were making
    changes exactly at the same time.
  - [18 Nov 00] Fixed bug: while updating a person or a family, in
    case of keys (first name/surname/number) conflicts, if there where